<?xml version="1.0"?>
<package format="2">
  <name>aslan_gui</name>
  <version>1.0.0</version>
  <description>The aslan_gui package</description>

  <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>aslan_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>aslan_msgs</exec_depend>

  <export>
  </export>
</package>
