<?xml version="1.0"?>
<package>
  <name>map_tf_generator</name>
  <version>1.10.0</version>
  <description>The map_tf_generator package</description>

  <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export></export>
</package>
