<?xml version="1.0"?>
<package format="2">
  <name>pcd_loader</name>
  <version>1.0.0</version>
  <description>The pcd_loader package</description>

  <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>aslan_build_flags</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>aslan_msgs</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>aslan_msgs</exec_depend>
  <exec_depend>curl</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <export>
  </export>
</package>
