<?xml version="1.0"?>
<package format="2">
  <name>check_message_alive</name>
  <version>1.0.0</version>
  <description>The check_message_alive package</description>
  <maintainer email="adbelrahman.barghout@streetdrone.com">Abdelrahman Barghouth</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>aslan_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>astar_planner</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>aslan_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>astar_planner</exec_depend>

  <export>

  </export>
</package>
