<?xml version="1.0"?>
<package format="2">
  <name>sd_vehicle_interface</name>
  <version>2.2.0</version>
  <description>The streetdrone vehicle interface package</description>

  <maintainer email="fionan@streetdrone.com">Fionan O’Sullivan</maintainer>
  <maintainer email="adbelrahman.barghout@streetdrone.com">Abdelrahman Barghouth</maintainer>
  
  <license>Apache 2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>socketcan_bridge</build_depend>
  <build_depend>socketcan_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>aslan_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>aslan_msgs</build_export_depend>

  <exec_depend>aslan_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>socketcan_bridge</exec_depend>
  <exec_depend>socketcan_interface</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>aslan_msgs</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>

  </export>
</package>
