<?xml version="1.0"?>
<package>
    <name>ndt_cpu</name>
    <version>1.10.0</version>
    <description>The ndt_cpu package</description>

    <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>

    <author email="yuki@ertl.jp">Yuki Kitsukawa</author>
    <author email="anh@ertl.jp">Anh Viet Nguyen</author>

    <license>Apache 2</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>libpcl-all-dev</build_depend>

    <run_depend>libpcl-all</run_depend>

</package>