<?xml version="1.0"?>
<package>
    <name>pcl_omp_registration</name>
    <version>1.10.0</version>
    <description>The pcl_omp_registration package</description>

    <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>

    <author email="yuki@ertl.jp">Yuki Kitsukawa</author>

    <license>Apache 2</license>
    <buildtool_depend>catkin</buildtool_depend>
    <export>
    </export>
</package>
