<?xml version="1.0"?>
<package format="2">
  <name>lane_planner</name>
  <version>1.0.0</version>
  <description>The lane_planner package</description>

  <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>aslan_build_flags</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>waypoint_follower</build_depend>
  <build_depend>aslan_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>waypoint_follower</exec_depend>
  <exec_depend>aslan_msgs</exec_depend>

  <export>  </export>
</package>
