<?xml version="1.0"?>
<package>
  <name>astar_planner</name>
  <version>1.0.0</version>
  <description>The astar_planner package</description>

  <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>
  <maintainer email="fionan@streetdrone.com">Fionan O’Sullivan</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>aslan_build_flags</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>waypoint_follower</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>aslan_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>waypoint_follower</run_depend>
  <run_depend>aslan_msgs</run_depend>

  <export>

  </export>
</package>
