<?xml version="1.0"?>
<package>
    <name>waypoint_follower</name>
    <version>1.0.0</version>
    <description>The waypoint_follower package</description>

    <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>
    <maintainer email="fionan@streetdrone.com">Fionan O’Sullivan</maintainer>

    <license>Apache 2</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>aslan_build_flags</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>aslan_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>aslan_msgs</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>sensor_msgs</run_depend>

    <export>
    </export>
</package>
