<?xml version="1.0"?>
<package>
    <name>waypoint_maker</name>
    <version>1.0.0</version>
    <description>The waypoint_maker package</description>

    <maintainer email="adbelrahman.barghout@streetdrone.com">Abdelrahman Barghouth</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>aslan_build_flags</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>waypoint_follower</build_depend>
    <build_depend>aslan_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>waypoint_follower</run_depend>
    <run_depend>aslan_msgs</run_depend>
</package>
