<?xml version="1.0"?>
<package format="2">
  <name>ray_ground_filter</name>
  <version>1.0.0</version>
  <description>The ray_ground_filter package</description>

  <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>aslan_build_flags</buildtool_depend>

  <build_depend>aslan_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>aslan_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>libqt5-core</exec_depend>

  <export>  </export>
</package>
