<?xml version="1.0"?>
<package>
  <name>camera_control_msgs</name>

  <version>0.2.1</version>

  <description>
      Message package from the pylon_camera package.
      Contains action and service definitions of the pylon_camera interface.
  </description>

  <author>Marcel Debout</author>
  <author>Markus Grimm</author>
  <author>Nikolas Engelhard</author>
  <maintainer email="grimm@magazino.eu">Markus Grimm</maintainer>
  <maintainer email="engelhard@magazino.eu">Nikolas Engelhard</maintainer>

  <license>BSD</license>

  <url>http://www.ros.org/wiki/pylon_camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
